--- a/assets/css/todos.css
+++ b/assets/css/todos.css
@@ -1,11 +1,55 @@
-/* body {
-    background: purple;
-} */
+body {
+    /* background: purple; */
+    font-family: 'Roboto', sans-serif;
+}
+
+h1 {
+    background-color: #2980e9;
+    color: white;
+    margin: 0;
+    padding: 10px 20px;
+    text-transform: uppercase;
+    font-size: 24px;
+    font-weight: normal;
+}
 
 #container {
-    border: 2px solid gray;
+    box-shadow: 0 0 3px rgba(0, 0, 0, 0.1);
     width: 360px;
-    margin: 0 auto;
+    margin: 100px auto;
+    background-color: #f7f7f7;
+}
+
+ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+input {
+    font-size: 18px;
+    background-color: #f7f7f7;
+    width: 100%;
+    padding: 13px 13px 13px 20px;
+    box-sizing: border-box;
+    color: #2980e9;
+}
+
+input:focus {
+    background-color: #fff;
+    border: 3px solid #2980e9;
+    outline: none;
+}
+
+li {
+    background-color: #fff;
+    height: 40px;
+    line-height: 40px;
+    color: #666;
+}
+
+li:nth-child(2n) {
+    background-color: #f7f7f7;
 }
 
 .completed {
