--- a/assets/css/todos.css
+++ b/assets/css/todos.css
@@ -1,5 +1,7 @@
 body {
-    /* background: purple; */
+    background: #4776E6;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #8E54E9, #4776E6);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #8E54E9, #4776E6); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     font-family: 'Roboto', sans-serif;
 }
 
@@ -11,6 +13,10 @@ h1 {
     text-transform: uppercase;
     font-size: 24px;
     font-weight: normal;
+}
+
+.fa-plus {
+    float: right;
 }
 
 #container {
@@ -26,6 +32,23 @@ ul {
     padding: 0;
 }
 
+span {
+    background-color: #e74e3c;
+    height: 40px;
+    margin-right: 20px;
+    text-align: center;
+    color: #fff;
+    width: 0px;
+    display: inline-block;
+    transition: 0.2s linear;
+    opacity: 0;
+}
+
+li:hover span {
+    width: 40px;
+    opacity: 1;
+}
+
 input {
     font-size: 18px;
     background-color: #f7f7f7;
@@ -33,6 +56,7 @@ input {
     padding: 13px 13px 13px 20px;
     box-sizing: border-box;
     color: #2980e9;
+    border: 3px solid rgba(0, 0, 0, 0);
 }
 
 input:focus {
